clusters/hetzner/apps/security/vault/app/ingress.yaml
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: vault
  namespace: istio-system
spec:
  gateways:
    - cluster-gateway
  hosts:
    - vault.svc.behn.dev
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: vault.security.svc.cluster.local
            port:
              number: 8200
